ひな形完成(仮)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,123 @@
   <title>自己紹介</title>
 </head>
 <body>
-  
+  <header id="top"><h1>自己紹介</h1></header>
+  <nav>
+    <ul>
+      <li><a href="#my-profile" title="MY PROFILE">MY PROFILE</a></li>
+      <li><a href="#comment" title="COMMENT">COMMENT</a></li>
+      <li><a href="#my-skills" title="MY SKILLS">MY SKILLS</a></li>
+      <li><a href="#form" title="FORM">FORM</a></li>
+    </ul>
+  </nav>
+  <div id="main-container">
+    <section class="container">
+      <header id="my-profile"><h4>~MY PROFILE~</h4></header>
+      <article class="contents">
+        <div class="my-face-img">
+          <div class="img">
+            <img src="" alt="顔画像" srcset="">
+          </div>
+        </div>
+        <div class="profile">
+          <div class="profile-box">
+            <p class="profile-title">名前</p>
+            <p class="profile-txt">
+              <ruby>一ノ瀬 裕斗<rt>いちのせ ゆうと</rt></ruby>
+            </p>
+          </div>
+          <div class="profile-box">
+            <p class="profile-title">出身</p>
+            <p class="profile-txt">大阪府</p>
+          </div>
+          <div class="profile-box">
+            <p class="profile-title">趣味</p>
+            <p class="profile-txt">プログラミング</p>
+          </div>
+        </div>
+      </article>
+    </section>
+    <section class="container">
+      <header id="comment"><h4>~COMMENT~</h4></header>
+      <article class="contents">
+        <h2>コメント</h2>
+        <div class="comment-box">
+          <p>
+            ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+          </p>
+          <img src="" alt="画像" srcset="">
+        </div>
+      </article>
+    </section>
+    <section class="container">
+      <header id="my-skills"><h4>~MY SKILLS~</h4></header>
+      <article class="contents">
+        <div class="skill-card">
+          <div class="skill-img">
+            <img src="" alt="スキル画像" srcset="">
+          </div>
+          <div class="skill-block">
+            <p class="skill-title">項目名</p>
+            <div class="skill-txt">
+              文章
+            </div>
+          </div>
+        </div>
+        <div class="skill-card">
+          <div class="skill-img">
+            <img src="" alt="スキル画像" srcset="">
+          </div>
+          <div class="skill-block">
+            <p class="skill-title">項目名</p>
+            <div class="skill-txt">
+              文章
+            </div>
+          </div>
+        </div>
+        <div class="skill-card">
+          <div class="skill-img">
+            <img src="" alt="スキル画像" srcset="">
+          </div>
+          <div class="skill-block">
+            <p class="skill-title">項目名</p>
+            <div class="skill-txt">
+              文章
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
+    <section class="container">
+      <header id="form"><h4>~FORM~</h4></header>
+      <article class="contents">
+        <form action="">
+          <div class="form-item">
+            <label for="user-name"><p>名前</p></label>
+            <input type="text" name="user-name" id="user-name" placeholder="名前">
+          </div>
+          <div class="form-item">
+            <label for="user-email"><p>メールアドレス</p></label>
+            <input type="email" name="user-email" id="user-email" placeholder="メールアドレス">
+          </div>
+          <div class="form-item">
+            <label for="user-message"><p>メッセージ</p></label>
+            <textarea name="user-message" id="user-message" cols="30" rows="10" placeholder="メッセージ"></textarea>
+          </div>
+        </form>
+      </article>
+    </section>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#my-profile" title="MY PROFILE">MY PROFILE</a></li>
+      <li><a href="#comment" title="COMMENT">COMMENT</a></li>
+      <li><a href="#my-skills" title="MY SKILLS">MY SKILLS</a></li>
+      <li><a href="#form" title="FORM">FORM</a></li>
+    </ul>
+  </nav>
+  <footer>
+    <div class="top"><a href="#top">top</a></div>
+    <div class="my-division">大阪情報専門学校</div>
+  </footer>
 </body>
 </html>
