各ヘッダーのborder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </nav>
   <div id="main-container">
     <section class="container">
-      <header id="my-profile"><h4>~MY PROFILE~</h4></header>
+      <header id="my-profile"><h2>~MY PROFILE~</h2></header>
       <article class="contents">
         <div class="profile-box">
           <div class="my-face-img">
@@ -28,17 +28,17 @@
             </div>
           </div>
           <div class="profile">
-            <div class="profile-box">
+            <div class="profile-card">
               <p class="profile-title">名前</p>
               <p class="profile-txt">
                 <ruby>一ノ瀬 裕斗<rt>いちのせ ゆうと</rt></ruby>
               </p>
             </div>
-            <div class="profile-box">
+            <div class="profile-card">
               <p class="profile-title">出身</p>
               <p class="profile-txt">大阪府</p>
             </div>
-            <div class="profile-box">
+            <div class="profile-card">
               <p class="profile-title">趣味</p>
               <p class="profile-txt">プログラミング</p>
             </div>
@@ -48,7 +48,7 @@
       </article>
     </section>
     <section class="container">
-      <header id="comment"><h4>~COMMENT~</h4></header>
+      <header id="comment"><h2>~COMMENT~</h2></header>
       <article class="contents">
         <h2>コメント</h2>
         <div class="comment-box">
@@ -60,7 +60,7 @@
       </article>
     </section>
     <section class="container">
-      <header id="my-skills"><h4>~MY SKILLS~</h4></header>
+      <header id="my-skills"><h2>~MY SKILLS~</h2></header>
       <article class="contents">
         <div class="skill-card">
           <div class="skill-img">
@@ -98,7 +98,7 @@
       </article>
     </section>
     <section class="container">
-      <header id="form"><h4>~FORM~</h4></header>
+      <header id="form"><h2>~FORM~</h2></header>
       <article class="contents">
         <form action="">
           <div class="form-item">
