プロフィールのところはなんとかいけた、プログラマーの画像追加、まだまだ味気ないので色、デザインどうするか考える

--- a/index.html
+++ b/index.html
@@ -29,18 +29,27 @@
           </div>
           <div class="profile">
             <div class="profile-card">
-              <p class="profile-title">名前</p>
-              <p class="profile-txt">
-                <ruby>一ノ瀬 裕斗<rt>いちのせ ゆうと</rt></ruby>
-              </p>
+              <div class="profile-title">名前</div>
+              <div class="profile-txt">
+                <p>
+                  <ruby>一ノ瀬 裕斗<rt>いちのせ ゆうと</rt></ruby>
+                </p>
+                <p class="profile-txt-mini">「いっちー」とみんなから呼ばれています。</p>
+              </div>
             </div>
             <div class="profile-card">
-              <p class="profile-title">出身</p>
-              <p class="profile-txt">大阪府</p>
+              <div class="profile-title">出身</div>
+              <div class="profile-txt">
+                <p>大阪府</p>
+                <p class="profile-txt-mini">南の方に住んでます。(和歌山寄り)</p>
+              </div>
             </div>
             <div class="profile-card">
-              <p class="profile-title">趣味</p>
-              <p class="profile-txt">プログラミング</p>
+              <div class="profile-title">趣味</div>
+              <div class="profile-txt">
+                <p>プログラミング</p>
+                <p class="profile-txt-mini">毎日やっています。</p>
+              </div>
             </div>
           </div>
         </div>
@@ -52,10 +61,9 @@
       <article class="contents">
         <h2>コメント</h2>
         <div class="comment-box">
-          <p>
-            ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-          </p>
-          <img src="" alt="画像" srcset="">
+          <div class="comment-img-space"></div>
+          <div class="comment-img"><img src="img/programmer-muscle.jpg" alt="筋肉プログラマーの画像" srcset=""></div>
+          <p>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
         </div>
       </article>
     </section>
@@ -112,6 +120,9 @@
           <div class="form-item">
             <label for="user-message"><p>メッセージ</p></label>
             <textarea name="user-message" id="user-message" cols="30" rows="10" placeholder="メッセージ"></textarea>
+          </div>
+          <div class="form-item">
+            <input type="button" value="送信">
           </div>
         </form>
       </article>
