コメントのところとスキルのところを少しだけ

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>自己紹介</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/profile.css">
+  <link rel="stylesheet" href="css/comment.css">
 </head>
 <body>
   <header id="top"><h1>自己紹介</h1></header>
@@ -67,9 +69,9 @@
         </div>
       </article>
     </section>
-    <section class="container">
+    <section class="container skills-container">
       <header id="my-skills"><h2>~MY SKILLS~</h2></header>
-      <article class="contents">
+      <article class="contents skills-contents">
         <div class="skill-card">
           <div class="skill-img">
             <img src="" alt="スキル画像" srcset="">
