--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/profile.css">
   <link rel="stylesheet" href="css/comment.css">
+  <link rel="stylesheet" href="css/myskills.css">
 </head>
 <body>
   <header id="top"><h1>自己紹介</h1></header>
@@ -77,7 +78,7 @@
             <img src="" alt="スキル画像" srcset="">
           </div>
           <div class="skill-block">
-            <p class="skill-title">項目名</p>
+            <div class="skill-title">項目名</div>
             <div class="skill-txt">
               文章
             </div>
@@ -88,7 +89,7 @@
             <img src="" alt="スキル画像" srcset="">
           </div>
           <div class="skill-block">
-            <p class="skill-title">項目名</p>
+            <div class="skill-title">項目名</div>
             <div class="skill-txt">
               文章
             </div>
@@ -99,7 +100,7 @@
             <img src="" alt="スキル画像" srcset="">
           </div>
           <div class="skill-block">
-            <p class="skill-title">項目名</p>
+            <div class="skill-title">項目名</div>
             <div class="skill-txt">
               文章
             </div>
