--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="" alt="スキル画像" srcset="">
           </div>
           <div class="skill-block">
-            <div class="skill-title">項目名</div>
+            <div class="skill-title">項目名・言語名</div>
             <div class="skill-txt">
               文章
             </div>
@@ -89,7 +89,7 @@
             <img src="" alt="スキル画像" srcset="">
           </div>
           <div class="skill-block">
-            <div class="skill-title">項目名</div>
+            <div class="skill-title">項目名・言語名</div>
             <div class="skill-txt">
               文章
             </div>
@@ -100,7 +100,7 @@
             <img src="" alt="スキル画像" srcset="">
           </div>
           <div class="skill-block">
-            <div class="skill-title">項目名</div>
+            <div class="skill-title">項目名・言語名</div>
             <div class="skill-txt">
               文章
             </div>
