フッターいじった。プロフィールのスタイル決まらない

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </ul>
   </nav>
   <footer>
-    <div class="top"><a href="#top">top</a></div>
+    <div class="top"><a href="#top">TOPへ</a></div>
     <div class="my-division">大阪情報専門学校</div>
   </footer>
 </body>
