ヘッダー、プロフィールいじってみた。毎日いじらなきゃマシにならないかも

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   <link rel="stylesheet" href="css/form.css">
 </head>
 <body>
-  <header id="top"><h1>自己紹介</h1></header>
+  <header id="top">
+      <h1><a href="#">自己紹介サイト</a></h1> 
+      <div>
+        <div>大阪情報専門学校</div>
+      </div>
+  </header>
   <nav class="navigation">
     <ul>
       <li><a href="#my-profile" title="MY PROFILE">MY PROFILE</a></li>
