アニメーション加えた

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <link rel="stylesheet" href="css/comment.css">
   <link rel="stylesheet" href="css/myskills.css">
   <link rel="stylesheet" href="css/form.css">
+  <script src="js/lib/jquery-3.6.0.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
   <header id="top">
       <h1><a href="#">自己紹介サイト</a></h1> 
       <div>
         <div>大阪情報専門学校</div>
+        <div>J1SA06 一ノ瀬裕斗</div>
       </div>
   </header>
   <nav class="navigation">
